--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
   },
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "nest build",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "check": "npx @biomejs/biome check --unsafe src",
+    "check:fix": "npx @biomejs/biome check --unsafe --write src",
+    "prepare": "husky"
   },
   "repository": {
     "type": "git",
@@ -19,5 +26,25 @@
   "bugs": {
     "url": "https://github.com/isaquetdiniz/monitoria-backend-es-2024-1/issues"
   },
-  "homepage": "https://github.com/isaquetdiniz/monitoria-backend-es-2024-1#readme"
+  "homepage": "https://github.com/isaquetdiniz/monitoria-backend-es-2024-1#readme",
+  "devDependencies": {
+    "@biomejs/biome": "^1.8.3",
+    "@commitlint/cli": "^19.4.1",
+    "@commitlint/config-conventional": "^19.4.1",
+    "@nestjs/cli": "^10.4.5",
+    "@nestjs/schematics": "^10.1.4",
+    "@swc/cli": "^0.4.0",
+    "@swc/core": "^1.7.22",
+    "@types/node": "^22.5.2",
+    "husky": "^9.1.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
+  },
+  "dependencies": {
+    "@nestjs/common": "^10.4.1",
+    "@nestjs/core": "^10.4.1",
+    "@nestjs/platform-express": "^10.4.1",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.1"
+  }
 }
