--- a/package.json
+++ b/package.json
@@ -1,53 +1,58 @@
 {
-  "name": "monitoria-backend-es-2024-1",
-  "version": "1.0.0",
-  "description": "Projeto desafio da monitoria de backend da disciplina de Engenharia de Software (ES) no período letivo de 2024.1 do curso de Sistemas de Informação (SI) da Universidade Federal de Pernambuco (UFPE).",
-  "engines": {
-    "node": ">=20.17.0",
-    "npm": ">=10.8.2"
-  },
-  "main": "index.js",
-  "scripts": {
-    "build": "nest build",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "check": "npx @biomejs/biome check --unsafe src",
-    "check:fix": "npx @biomejs/biome check --unsafe --write src",
-    "prepare": "husky"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/isaquetdiniz/monitoria-backend-es-2024-1.git"
-  },
-  "author": "itd@cin.ufpe.br",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/isaquetdiniz/monitoria-backend-es-2024-1/issues"
-  },
-  "homepage": "https://github.com/isaquetdiniz/monitoria-backend-es-2024-1#readme",
-  "devDependencies": {
-    "@biomejs/biome": "^1.8.3",
-    "@commitlint/cli": "^19.4.1",
-    "@commitlint/config-conventional": "^19.4.1",
-    "@nestjs/cli": "^10.4.5",
-    "@nestjs/schematics": "^10.1.4",
-    "@swc/cli": "^0.4.0",
-    "@swc/core": "^1.7.22",
-    "@types/node": "^22.5.2",
-    "husky": "^9.1.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
-  },
-  "dependencies": {
-    "@nestjs/common": "^10.4.1",
-    "@nestjs/core": "^10.4.1",
-    "@nestjs/platform-express": "^10.4.1",
-    "@nestjs/swagger": "^7.4.0",
-    "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
-  }
+	"name": "monitoria-backend-es-2024-1",
+	"version": "1.0.0",
+	"description": "Projeto desafio da monitoria de backend da disciplina de Engenharia de Software (ES) no período letivo de 2024.1 do curso de Sistemas de Informação (SI) da Universidade Federal de Pernambuco (UFPE).",
+	"engines": {
+		"node": ">=20.17.0",
+		"npm": ">=10.8.2"
+	},
+	"main": "index.js",
+	"scripts": {
+		"build": "nest build",
+		"start": "nest start",
+		"start:dev": "nest start --watch",
+		"start:debug": "nest start --debug --watch",
+		"start:prod": "node dist/main",
+		"check": "npx @biomejs/biome check --unsafe src",
+		"check:fix": "npx @biomejs/biome check --unsafe --write src",
+		"prepare": "husky"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/isaquetdiniz/monitoria-backend-es-2024-1.git"
+	},
+	"author": "itd@cin.ufpe.br",
+	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/isaquetdiniz/monitoria-backend-es-2024-1/issues"
+	},
+	"homepage": "https://github.com/isaquetdiniz/monitoria-backend-es-2024-1#readme",
+	"devDependencies": {
+		"@biomejs/biome": "^1.8.3",
+		"@commitlint/cli": "^19.4.1",
+		"@commitlint/config-conventional": "^19.4.1",
+		"@nestjs/cli": "^10.4.5",
+		"@nestjs/schematics": "^10.1.4",
+		"@swc/cli": "^0.4.0",
+		"@swc/core": "^1.7.22",
+		"@types/better-sqlite3": "^7.6.11",
+		"@types/node": "^22.5.2",
+		"drizzle-kit": "^0.24.2",
+		"husky": "^9.1.5",
+		"ts-node": "^10.9.2",
+		"typescript": "^5.5.4"
+	},
+	"dependencies": {
+		"@libsql/client": "^0.10.0",
+		"@nestjs/common": "^10.4.1",
+		"@nestjs/core": "^10.4.1",
+		"@nestjs/platform-express": "^10.4.1",
+		"@nestjs/swagger": "^7.4.0",
+		"better-sqlite3": "^11.2.1",
+		"class-transformer": "^0.5.1",
+		"class-validator": "^0.14.1",
+		"drizzle-orm": "^0.33.0",
+		"reflect-metadata": "^0.2.2",
+		"rxjs": "^7.8.1"
+	}
 }
