--- a/biome.json
+++ b/biome.json
@@ -14,6 +14,9 @@
 	"linter": {
 		"enabled": true,
 		"rules": {
+			"suspicious": {
+				"noExplicitAny": "warn"
+			},
 			"style": {
 				"useImportType": {
 					"level": "warn",
