--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
 		"start:prod": "node dist/main",
 		"check": "npx @biomejs/biome check --unsafe src",
 		"check:fix": "npx @biomejs/biome check --unsafe --write src",
+		"test": "vitest run",
+		"test:watch": "vitest",
+		"test:cov": "vitest run --coverage",
+		"test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
+		"test:e2e": "vitest run --config ./vitest.config.e2e.ts",
 		"prepare": "husky"
 	},
 	"repository": {
@@ -34,16 +39,18 @@
 		"@nestjs/cli": "^10.4.5",
 		"@nestjs/schematics": "^10.1.4",
 		"@swc/cli": "^0.4.0",
-		"@swc/core": "^1.7.22",
+		"@swc/core": "^1.7.26",
 		"@types/better-sqlite3": "^7.6.11",
 		"@types/node": "^22.5.2",
+		"@vitest/coverage-v8": "^2.0.5",
 		"drizzle-kit": "^0.24.2",
 		"husky": "^9.1.5",
 		"ts-node": "^10.9.2",
-		"typescript": "^5.5.4"
+		"typescript": "^5.5.4",
+		"unplugin-swc": "^1.5.1",
+		"vitest": "^2.0.5"
 	},
 	"dependencies": {
-		"@libsql/client": "^0.10.0",
 		"@nestjs/common": "^10.4.1",
 		"@nestjs/core": "^10.4.1",
 		"@nestjs/platform-express": "^10.4.1",
