--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,8 @@ jobs:
       - name: Check files
         run: npm run check
 
-      - name: Run tests
+      - name: Run unit tests
         run: npm run test
+
+      - name: Run e2e tests
+        run: npm run test:e2e
