--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
 		"test:watch": "vitest",
 		"test:cov": "vitest run --coverage",
 		"test:debug": "vitest --inspect-brk --inspect --logHeapUsage --threads=false",
-		"test:e2e": "vitest run --config ./vitest.config.e2e.ts",
+		"test:e2e": "vitest run --config ./vitest-e2e.config.mts",
 		"prepare": "husky"
 	},
 	"repository": {
@@ -38,13 +38,16 @@
 		"@commitlint/config-conventional": "^19.4.1",
 		"@nestjs/cli": "^10.4.5",
 		"@nestjs/schematics": "^10.1.4",
+		"@nestjs/testing": "^10.4.1",
 		"@swc/cli": "^0.4.0",
 		"@swc/core": "^1.7.26",
 		"@types/better-sqlite3": "^7.6.11",
 		"@types/node": "^22.5.2",
+		"@types/supertest": "^6.0.2",
 		"@vitest/coverage-v8": "^2.0.5",
 		"drizzle-kit": "^0.24.2",
 		"husky": "^9.1.5",
+		"supertest": "^7.0.0",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.5.4",
 		"unplugin-swc": "^1.5.1",
@@ -52,6 +55,7 @@
 	},
 	"dependencies": {
 		"@nestjs/common": "^10.4.1",
+		"@nestjs/config": "^3.2.3",
 		"@nestjs/core": "^10.4.1",
 		"@nestjs/platform-express": "^10.4.1",
 		"@nestjs/swagger": "^7.4.0",
